start of process

--- a/projects/booktunes.html
+++ b/projects/booktunes.html
@@ -24,25 +24,60 @@
             </div>
         </header>
         <main class="main" id="top">            
-            <!-- The introduction. Says my name and a short one-liner -->
             <div id="title" class="header primary">
                 <p> 
-                    Airports of the World!
+                    Booktunes App Design Process
                 </p>
             </div>
-            <img class="image" src="../assets/teamflatearth.png" alt="">
+            <img class="image" src="../assets/booktunes.png" alt="">
             <div id="abstract" class="medium primary">
+                <h3>
+                    Executive Summary
+                </h3>
                 <p>
-                    For this project, I collaborated with a team of other students to make a pathfinding application from scratch. The goal was to use one of two graph-based pathfinding algorithms and create a map navigation tool.
+                    Content
                 </p>
+                <h3>
+                    Introduction
+                </h3>
                 <p>
-                    Over the course of three weeks, me and the ironically named “Team Flat Earth”: Jaden Rigg and Nathan Loafman, worked together to create an application that would find the best flight path to and from any major airport in the world. As this application was made during the pandemic, we met for team meetings virtually most of the time. As a team, we were responsible for keeping track of meeting minutes, member responsibilities, a final presentation showing off our application, and creating the application in Java from scratch.
+                    Content
                 </p>
+                <h3>
+                    Method
+                </h3>
                 <p>
-                    We had many design and logistical problems. One of our original team members didn’t contribute meaningfully, and we had to redistribute the workload. We had problems with making sure every team member was working with the same version of code. Through hard work and long hours, we got the application working. As an aspiring software engineer, this tested my technical limits, and put my teamwork skills to the test.
+                    Content
                 </p>
+                <h3>
+                    Research
+                </h3>
                 <p>
-                    Technically, the application uses Dijkstra's algorithm to find the best route between airport locations. We used an XML document with a list of all major airports and their locations. The distance between each airport is calculated spherically, but the locations are displayed on a flat map. The application can calculate the total distance traveled and time traveled for any two locations. 
+                    Content
+                </p>
+                <h3>
+                    Modeling
+                </h3>
+                <p>
+                    Content
+                </p>
+                <h3>
+                    Frameworks
+                </h3>
+                <p>
+                    Content
+                </p>
+                <h3>
+                    Refinement
+                </h3>
+                <p>
+                    Content
+                </p>
+                <h3>
+                    Conclusion
+                </h3>
+                <p>
+                    Content
                 </p>
             </div>
         </main>
