--- a/work.html
+++ b/work.html
@@ -35,7 +35,7 @@
                         <div class="card" href="#">
                             <img class="card-img-top" src="assets/booktunes.png" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Booktunes App Prototype</h5>
+                                <h5 class="card-title">Booktunes App Design Process</h5>
                                 <p class="card-text">A Figma-based prototype of a music player and book recommendation app. Listen to the perfect tune for the book you're reading!</p>
                                 <p class="small"><i>Collaborated with Bella Margiano, Asia Terrel, Gabrielle Horton</i></p>
                                 <div class="cardButtons">
