progress for process 2

--- a/projects/booktunes.html
+++ b/projects/booktunes.html
@@ -25,16 +25,17 @@
         </header>
         <main class="main" id="top">            
             <div id="title" class="header primary">
-                <p> 
+                <p class="title"> 
                     Booktunes App Design Process
                 </p>
             </div>
             <img class="image" src="../assets/booktunes.png" alt="">
             <div id="abstract" class="medium primary">
-                <h3>
+                <!-- Executive Summary -->
+                <h3 class="title">
                     Executive Summary
                 </h3>
-                <p>
+                <p class="paragraph">
                     <table class="table">
                         <tr>
                             <th><b>Approach:</b> Goal Directed Design</th>
@@ -43,7 +44,7 @@
                         </tr>
                         <tr>
                             <th><b>Team Size: 4</b></th>
-                            <th><b>Tools: Discord, FigJam, Figma</b></th>
+                            <th><b>Tools: Discord, FigJam, Figma, Canva</b></th>
                         </tr>
                         <tr>
                             <th><b>App Idea: A book recommendation and music player app.</b></th>
@@ -51,33 +52,35 @@
                         </tr>
                         <tr>
                             <th><b>Duration: 4 months</b></th>
-                            <th><b>Links: <a href="https://www.figma.com/file/SBMjf4R074slz52uNcuFnl/Team-Margiano---BookTunes-Prototype?node-id=0%3A1&t=qYFT19TaCqXsDCa1-1">Figma Prototype</a></b></th>
+                            <th><b>Links: <a href="https://www.figma.com/file/SBMjf4R074slz52uNcuFnl/Team-Margiano---BookTunes-Prototype?node-id=0%3A1&t=qYFT19TaCqXsDCa1-1">Figma Prototype</a></b>
+                             <a href="https://www.canva.com/design/DAFbaZsRNks/AImHEynnRxVWH_lz6iX3Kg/view?utm_content=DAFbaZsRNks&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">Research Report</a></th>
                         </tr>
                     </table>
                 </p>
-                
-                <h3>
+                <!-- Intro -->
+                <h3 class="title">
                     Introduction
                 </h3>
-                <p>
+                <p class="paragraph">
                     This project was titled Booktunes. The concept behind booktunes is to make it easy for readers to find playlists and songs that match the "vibe" of the book they're reading. If you're reading Lord of the Rings, the music might be tense and epic. If you're reading Harry Potter, the music might be wondrous with strings.
                 </p>
-                <p>
-                    To design the app prototype, we used a process called Goal Directed Design, or GDD. As it was a class settings, our team leader was the creator of the idea, so the requirements phase was dropped.
+                <p class="paragraph">
+                    To design the app prototype, we used a process called Goal Directed Design, or GDD. As it was a class settings, our team leader was the creator of the idea, so the requirements phase was dropped to fit within a 16-week course.
                 </p>
-                <p>
-                    The 
+                <p class="paragraph">
+                    The rest of this page is organized by the GDD phases in order. See the method section below for a overview of GDD.
                 </p>
-                <h3>
+                <!-- Method -->
+                <h3 class="title">
                     Method
                 </h3>
-                <p>
+                <p class="paragraph">
                     GDD, or Goal Directed Design, was created by Alan Cooper, and is detailed in his book 'About Face – The essentials of interaction design'. The method is a behavior and evidence-based design process that uses research to create a fictional "persona", or average user, and then use that persona to create a robust application that fulfils the persona's requirements.
                 </p>
-                <p>
+                <p class="paragraph">
                     As mentioned earlier, our team leader was the creator of the idea, so the normally included requirements phase was dropped.
                 </p>
-                <p>
+                <p class="paragraph">
                     <b>Adapted GDD Phases</b>
                     <table class="table">
                         <tr>
@@ -94,25 +97,30 @@
                         </tr>
                     </table>
                 </p>
-                <p>
+                <p class="paragraph">
                     
                 </p>
 
-                <h3>
+                <!-- Research Phase -->
+                <h3 class="title">
                     Research Phase
                 </h3>
-                <p>The Research Phase is all about collecting data. In the research phase, you look at competitors, review research literature, interview potential users, and talk with stakeholders. </p>
-                <p>
-                    Our Research Phase had five subphases. 
+                <p class="paragraph">
+                    The Research Phase is all about collecting data. In the research phase, you look at competitors, review research literature, interview potential users, and talk with stakeholders. </p>
+                <p class="paragraph">
+                    <h3>Kickoff Meeting</h5>
+                    Since there was no
                 </p>
 
-                <h3>
+
+                <!-- Modeling Phase -->
+                <h3 class="title">
                     Modeling
                 </h3>
-                <p>
+                <p class="paragraph">
                     Content
                 </p>
-                <p>
+                <p class="paragraph">
                     Requirements List
 PP - primary , SP - secondary, BP - both
 (an action)  (an object) (the context).
@@ -132,25 +140,27 @@ Song View Page
 Profile/Settings Pages
 
                 </p>
-
-                <h3>
+                <!-- Frameworks Phase -->
+                <h3 class="title">
                     Frameworks
                 </h3>
-                <p>
+                <p class="paragraph">
                     Content
                 </p>
 
-                <h3>
+                <!-- Refinement Phase -->
+                <h3 class="title">
                     Refinement
                 </h3>
-                <p>
+                <p class="paragraph">
                     Content
                 </p>
 
-                <h3>
+                <!-- Conclusion -->
+                <h3 class="title">
                     Conclusion
                 </h3>
-                <p>
+                <p class="paragraph">
                     Content
                 </p>
             </div>
