--- a/work.html
+++ b/work.html
@@ -39,7 +39,8 @@
                                 <p class="card-text">A Figma-based prototype of a music player and book recommendation app. Listen to the perfect tune for the book you're reading!</p>
                                 <p class="small"><i>Collaborated with Bella Margiano, Asia Terrel, Gabrielle Horton</i></p>
                                 <div class="cardButtons">
-                                    <a href="https://www.figma.com/file/SBMjf4R074slz52uNcuFnl/Team-Margiano---BookTunes-Prototype?node-id=0%3A1&t=qYFT19TaCqXsDCa1-1" class="btn">Source</a>
+                                    <a href="https://www.figma.com/file/SBMjf4R074slz52uNcuFnl/Team-Margiano---BookTunes-Prototype?node-id=0%3A1&t=qYFT19TaCqXsDCa1-1" class="btn">Prototype</a>
+                                    <a href="https://www.canva.com/design/DAFbaZsRNks/AImHEynnRxVWH_lz6iX3Kg/view?utm_content=DAFbaZsRNks&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" class="btn">Research Report</a>
                                     <a href="../projects/booktunes.html" class="btn">More Info</a>
                                 </div>
                                 <div class="card-footer text-muted">
