significant edits to process page

--- a/projects/booktunes.html
+++ b/projects/booktunes.html
@@ -26,7 +26,7 @@
         <main class="main" id="top">            
             <div id="title" class="header primary">
                 <p class="title"> 
-                    Booktunes App Design Process
+                    Booktunes Design Process
                 </p>
             </div>
             <img class="image" src="../assets/booktunes.png" alt="">
@@ -40,7 +40,6 @@
                         <tr>
                             <th><b>Approach:</b> Goal Directed Design</th>
                             <th><b>Objectives:</b> Make a working app prototype in figma.</th>
-                   
                         </tr>
                         <tr>
                             <th><b>Team Size: 4</b></th>
@@ -88,10 +87,12 @@
                             <th><b>Phase 2</b></th>
                             <th><b>Phase 3</b></th>
                             <th><b>Phase 4</b></th>
+                            <th><b>Phase 5</b></th>
                         </tr>
                         <tr>
                             <th><b>Research</b></th>
                             <th><b>Modeling</b></th>
+                            <th><b>Requirements</b></th>
                             <th><b>Framework</b></th>
                             <th><b>Refinement</b></th>
                         </tr>
@@ -111,57 +112,131 @@
                     <h3>Kickoff Meeting</h5>
                     Since there was no
                 </p>
+                <p class="paragraph">
+                    <h3>Literature Review</h5>
+                    Since there was no
+                </p>
+                <p class="paragraph">
+                    <h3>Competitive Audit</h5>
+                    Since there was no
+                </p>
+                <p class="paragraph">
+                    <h3>Stakeholder Interviews</h5>
+                    Since there was no
+                </p>
+                <p class="paragraph">
+                    <h3>User Interviews</h5>
+                    Since there was no
+                </p>
+
 
 
                 <!-- Modeling Phase -->
                 <h3 class="title">
-                    Modeling
+                    Modeling Phase
                 </h3>
                 <p class="paragraph">
-                    Content
+                    This phase is all about taking our raw research data and turning it into a persona. The first step is to take data points from the interviews and plot them on a behavioral variables map. 
+                </p>
+                <img class="image" src="../assets/modeling1.png" alt="A screenshot of a behavioral variables map.">
+                <p class="paragraph">
+                    Next, we go over the behavioral variables map and identify behavior patterns by circling dots that are grouped together. 
+                </p>
+                <img class="image" src="../assets/modeling2.png" alt="A screenshot of a behavioral variables map with marked behavior patterns.">
+                <p class="paragraph">
+                    Finally, we take these behavior patterns and create a fictional character profile based on them in aggregate. This profile is called a persona. The persona will operate as our average user, and future design decisions will be based solely on this persona and it's goals. It's important to note that a persona isn't real, but they are assembled from the thoughts, feelings, behaviors, and motivations of real people. 
                 </p>
                 <p class="paragraph">
-                    Requirements List
-PP - primary , SP - secondary, BP - both
-(an action)  (an object) (the context).
-
-Onboarding Screen, given option to sign up or login
-Log in Screen to type in username, password, or click forgot password
-Homepage for viewing premade or personalized content
-View Last Listened Playlists
-View Recommended Playlists
-View different book genre playlists
-Access Profile/ Settings Page
-Search Page
-Sort playlists by genres, book series, and moods
-Library Page
-Playlist View Page
-Song View Page
-Profile/Settings Pages
-
+                    Alan Cooper makes note of the role of personas in his book 'About Face'. “Personas provide us with a precise way of thinking and communicating about how groups of users behave, how they think, what they want to accomplish, and why.” (Cooper et al., 62) 
                 </p>
+                <img class="image" src="../assets/persona.png" alt="A screenshot of the persona, named Ela Warner.">
+
+
+                <!-- Requirements Phase -->
+                <h3 class="title">
+                    Requirements Phase
+                </h3>
+                <p class="paragraph">
+                    The requirements phase is all about creating a list of requirements from our newly created persona and brainstorm what the end result might be like. The first step for this was to create a problem statement and a visions statement.
+                </p>
+                <h3>Problem Statement</h3>
+                <p class="paragraph">
+                    <i>The current state of the BookTunes industry lacks a niche-related app that focuses on readers and enhancing the reading experience and has focused primarily on the general generic use of listening to music. What existing products/services fail to address is the desire from readers for an app that offers playlist and music that corresponds with books. Our product/service will address this gap by capitalizing on this niche market by offering readers a central music hub with playlists that correspond with different books and genres. </i>
+                </p>
+                <h3>Vision Statement</h3>
+                <p class="paragraph">
+                    <i>The new design of music a streaming app will help users achieve their goal of reading more by allowing them to find music that corresponds well with their books creating a relaxing reading environment with greater efficiency, and without problems of interruptive ads, inaccurate recommendations, and repetitive recommendations that they currently experience. This will dramatically improve BookTunes’ customer satisfaction ratings and lead to increased market share.</i>
+                </p>
+                <p class="paragraph">
+                    After creating the Problem and Vision statements, we created what is called a context scenario, which tells a story from the perspective of our persona and a day in their life while using Booktunes.
+                </p>
+                <img class="image" src="../assets/contextscenario.png" alt="A screenshot showing the finished context scenario.">
+                <p class="paragraph">
+                    Finally, we created the requirements list based on our context scenario. We tracked all of the actions, objects, and contexts which appeared in the context scenario, and refined them into a list of required features and object for the app prototype to have.
+                </p>
+                <h3>Requirements List</h3>
+                <p class="paragraph">
+                    <ol class="paragraph">
+                        <li>Access (action) pre-made playlist (object) on home screen (context)
+                        </li> 
+                        <li>Streams (action) custom playlist (object) from app library (context)
+                        </li>
+                        <li>Press (action) pause button (object) to stop the music (context)
+                        </li>
+                        <li>Explore (action) for new book (object) on book recommendation section of the search page
+                        </li>
+                        <li>Streams (action) book title playlist (object) made by another user from search page (context)
+                        </li>
+                        <li>Creates (action) custom book title playlist (object) in app library (context)
+                        </li>
+                        <li>Explores (action) genre categories (object) on search page (context)
+                        </li>
+                        <li>Streams (action) ambient radio (object) as background noise on home page(context)
+                        </li>
+                        <li>Shares (action) custom playlist (object) with friend over message (context)
+                        </li>                        
+                    </ol>
+                </p>
+
+
+
+
                 <!-- Frameworks Phase -->
                 <h3 class="title">
-                    Frameworks
+                    Frameworks Phase
                 </h3>
                 <p class="paragraph">
-                    Content
+                    Before instantly jumping to the final, high fidelity prototype, we created a low-fidelity wireframe in FigJam based on our requirements. If we had jumped ahead, we would be lost when creating the prototype. The prototype is all about the details and fleshing out the idea, whereas the wireframe is for organizing the paths and making sure they flow well. We used two different colored arrows to distinguish between different scenarios.
+                </p>
+                <p class="paragraph">
+                    The purple arrows represent Key Paths, which describe a user's most commonly used paths. The orange arrows represent Validation Paths, which are paths that are used very infrequently, or only once.
+                </p>
+                <img class="image" src="../assets/wireframe.png" alt="A photo showing the different pages of the app and their relation to each other.">
+                <p class="paragraph">
+                    The wireframe allows us to visually represent the persona's goals and requirements. In doing the wireframe, we discovered what we needed more screens than anticipated. If we had skipped to prototyping, we would have been blindsided.
                 </p>
 
                 <!-- Refinement Phase -->
                 <h3 class="title">
-                    Refinement
+                    Refinement Phase
                 </h3>
                 <p class="paragraph">
-                    Content
+                    The refinement phase is all about taking a "rough draft" of the prototype and conducting usability testing to detect issues, inconsistencies, easily misunderstood elements, and other problems that would have caused a bad experience to users or degrade the quality or functionality of the app. In our case, we had two different participants each use our prototype. They were each asked to complete a number of tasks within the app and rate it's difficulty from 1 to 5, and then elaborate on their thoughts and feelings regarding the task. 
                 </p>
-
+                <img class="image" src="../assets/booktunes.png" alt="A screenshot of the completed prototype and its frames.">
+                <p class="paragraph">
+                    After each usability test, we made brief changes to improve our prototype before the next one. After this concluded, we continued working on the prototype until we deemed it completed. 
+                </p>
                 <!-- Conclusion -->
                 <h3 class="title">
                     Conclusion
                 </h3>
                 <p class="paragraph">
-                    Content
+                    Goal Directed Design is a fantastic design method. It uses actual research and evidence to create a product, rather than just guessing or conducting usability testing at the last minute. If I could do this project over again, I would have communicated with my team better, and perhaps contributed to the research report more. User feedback during the refinement phase was immensely helpful, and spurred us to change many things, such as changing the alignment of the back arrows on each page, and changing the "perfect pairs" page to be easily readable. This project was a valuable experience for me in both teamwork and in learning the fundamentals of interaction design.
+                </p>
+                <h3>Works Cited</h3>
+                <p class="paragraph">
+                    ​Cooper, Alan & Robert Reimann, David Cronin, Christopher Noessel. 2014. About Face: The Essentials of Interaction Design, 4th Edition. Hoboken, NJ: Wiley Press.
                 </p>
             </div>
         </main>
