--- a/projects/booktunes.html
+++ b/projects/booktunes.html
@@ -51,8 +51,8 @@
                         </tr>
                         <tr>
                             <th><b>Duration: 4 months</b></th>
-                            <th><b>Links: <a href="https://www.figma.com/file/SBMjf4R074slz52uNcuFnl/Team-Margiano---BookTunes-Prototype?node-id=0%3A1&t=qYFT19TaCqXsDCa1-1">Figma Prototype</a></b>
-                             <a href="https://www.canva.com/design/DAFbaZsRNks/AImHEynnRxVWH_lz6iX3Kg/view?utm_content=DAFbaZsRNks&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">Research Report</a></th>
+                            <th><b>Links: <a class="link" href="https://www.figma.com/file/SBMjf4R074slz52uNcuFnl/Team-Margiano---BookTunes-Prototype?node-id=0%3A1&t=qYFT19TaCqXsDCa1-1">Figma Prototype</a></b>
+                             <a class="link" href="https://www.canva.com/design/DAFbaZsRNks/AImHEynnRxVWH_lz6iX3Kg/view?utm_content=DAFbaZsRNks&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">Research Report</a></th>
                         </tr>
                     </table>
                 </p>
@@ -65,6 +65,15 @@
                 </p>
                 <p class="paragraph">
                     To design the app prototype, we used a process called Goal Directed Design, or GDD. As it was a class settings, our team leader was the creator of the idea, so the requirements phase was dropped to fit within a 16-week course.
+
+                </p>
+                <p class="paragraph">
+                    My team members each have their own portfolio websites. See them below:
+                    <ul>
+                        <li><a class="link" href="https://www.bellamargiano.com/work">Bella Margiano</a></li>
+                        <li><a class="link" href="https://asia-terrell.weebly.com/booktunes.html">Asia Terrell</a></li>
+                        <li><a class="link" href="http://gabrielle-horton.weebly.com/process-page.html">Gabrielle Horton</a></li>
+                    </ul>
                 </p>
                 <p class="paragraph">
                     The rest of this page is organized by the GDD phases in order. See the method section below for a overview of GDD.
@@ -107,26 +116,50 @@
                     Research Phase
                 </h3>
                 <p class="paragraph">
-                    The Research Phase is all about collecting data. In the research phase, you look at competitors, review research literature, interview potential users, and talk with stakeholders. </p>
-                <p class="paragraph">
+                    The Research Phase is all about collecting data, and is the most extensive phase of Goal Directed Design. In the research phase, you look at competitors, review research literature, interview potential users, and talk with stakeholders. </p>
                     <h3>Kickoff Meeting</h5>
-                    Since there was no
+                <p class="paragraph">    
+                    Since there were no stakeholders besides our team leader Bella Margiano, we simply filled out a kickoff worksheet, which allowed us to make a problem statement and assumption statements to predict the direction the project will go. The problem statement defines the purpose of the project and the status quo it seeks to change.
+                </p>
+                <h3>Problem Statement</h3>
+                <p class="paragraph">
+                    <i>The current state of the BookTunes industry lacks a niche-related app that focuses on readers and enhancing the reading experience and has focused primarily on the general generic use of listening to music. What existing products/services fail to address is the desire from readers for an app that offers playlist and music that corresponds with books. Our product/service will address this gap by capitalizing on this niche market by offering readers a central music hub with playlists that correspond with different books and genres. </i>
+                </p>
+                <h3>Literature Review</h5>
+                <p class="paragraph">
+                    The literature review is part of the research phase that involves searching for literature discussing the status quo of our problem statement, potential features, potential users, industry statistics, and other useful metrics. We had a few key takeaways:
+                    <ul class="paragraph">
+                        <li>Young adults read more than any other age group.</li>
+                        <li>Streaming services are already pushing custom playlists based on popular books.</li>
+                        <li>Streaming apps are a hot market right now, and is expected have room to exponentially grow.</li>
+                        <li>A community on TikTok called "BookTok" commonly recommends playlists, artists, and other music to best pair with a book or series.</li>
+                    </ul>
+                </p>
+                <h3>Competitive Audit</h5>
+                <p class="paragraph">
+                    The competitive audit is where we examine the predicted competitors for Booktunes and analyze their products. Since Booktunes is a streaming application but also a book recommendation app, we looked at streaming services like YouTube, Spotify and Apple Music, as well as reading recommendation websites like Goodreads.
                 </p>
                 <p class="paragraph">
-                    <h3>Literature Review</h5>
-                    Since there was no
+                    The audit covers many details and attributes of the competing apps, such as price, popular features, their best attributes, and their downsides. We found that a lot of the popular features could be replicated in our own app, and the bad features could be tackled with different design decisions or by taking a different approach. As with all research, not everything was useful, but we came away with a lot of ideas for features.
+                </p>
+                <h3>Stakeholder Interviews</h5>
+                <p class="paragraph">
+                    As mentioned earlier, we do not have a real client, so the only stakeholder was our team leader, Bella Margiano. To simulate an interview, our team used the assumption statements from our kickoff meeting worksheet. We had a few takeaways:
+                    <ul class="paragraph">
+                        <li>Our target audience is people who enjoy reading.</li>
+                        <li>The app should be easy and seamless to use alongside a user's daily life.</li>
+                        <li>Users will select a playlist that is related to the book they are reading and listen to it while doing so.</li>
+                        <li>A variety of playlist types are available: lyrical, no lyrics, colored noise, or user-created playlists.</li>
+                        <li>The product should increase immersion and suppress boredom while reading.</li>
+                        <li>The primary value a use gets from the app is setting the mood for reading and increasing immersion.</li>
+                    </ul>
+                </p>
+                <h3>User Interviews</h5>
+                <p class="paragraph">
+                    The final step of the research phase is to conduct user interviews. We first created a persona hypothesis, which defined the kind of people which might use the app. We used this persona hypothesis to select a number of volunteers from the university book club or writing club.
                 </p>
                 <p class="paragraph">
-                    <h3>Competitive Audit</h5>
-                    Since there was no
-                </p>
-                <p class="paragraph">
-                    <h3>Stakeholder Interviews</h5>
-                    Since there was no
-                </p>
-                <p class="paragraph">
-                    <h3>User Interviews</h5>
-                    Since there was no
+                    We conducted five interviews. Three were online, using either using Discord or Zoom. Two other interviews were conducted in person. I took notes for two of the virtual interviews, and conducted one of them. 
                 </p>
 
 
