--- a/projects/booktunes.html
+++ b/projects/booktunes.html
@@ -161,7 +161,17 @@
                 <p class="paragraph">
                     We conducted five interviews. Three were online, using either using Discord or Zoom. Two other interviews were conducted in person. I took notes for two of the virtual interviews, and conducted one of them. 
                 </p>
-
+                <img class="image" src="../assets/research.png" alt="A screenshot showing a virtual interview taking place.">
+                <p class="paragraph">
+                    After the interviews concluded, we used affinity maps to take notes and organize our thoughts into distinct categories. This allowed us to spot patterns and analyze the results of the interviews. We ended up finding a few patterns between interviewees:
+                    <ul class="paragraph">
+                        <li>How often they read</li>
+                        <li>Where they read</li>
+                        <li>How they discover new books</li>
+                        <li>What role music plays in their daily life</li>
+                        <li>The apps they use for streaming music</li>
+                    </ul>
+                </p>
 
 
                 <!-- Modeling Phase -->
