--- a/work.html
+++ b/work.html
@@ -41,10 +41,10 @@
                                 <div class="cardButtons">
                                     <a href="https://www.figma.com/file/SBMjf4R074slz52uNcuFnl/Team-Margiano---BookTunes-Prototype?node-id=0%3A1&t=qYFT19TaCqXsDCa1-1" class="btn">Prototype</a>
                                     <a href="https://www.canva.com/design/DAFbaZsRNks/AImHEynnRxVWH_lz6iX3Kg/view?utm_content=DAFbaZsRNks&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" class="btn">Research Report</a>
-                                    <a href="../projects/booktunes.html" class="btn">More Info</a>
+                                    <a href="../projects/booktunes.html" class="btn">Process Page</a>
                                 </div>
                                 <div class="card-footer text-muted">
-                                    <i>April 29th, 2023</i>
+                                    <i>April 29th, 2023 - 16 weeks total</i>
                                 </div>
                             </div>
                         </div>
