--- a/projects/booktunes.html
+++ b/projects/booktunes.html
@@ -277,6 +277,7 @@
                 <p class="paragraph">
                     Goal Directed Design is a fantastic design method. It uses actual research and evidence to create a product, rather than just guessing or conducting usability testing at the last minute. If I could do this project over again, I would have communicated with my team better, and perhaps contributed to the research report more. User feedback during the refinement phase was immensely helpful, and spurred us to change many things, such as changing the alignment of the back arrows on each page, and changing the "perfect pairs" page to be easily readable. This project was a valuable experience for me in both teamwork and in learning the fundamentals of interaction design.
                 </p>
+                <img class="image" src="../assets/onboarding.png" alt="A picture showing the onboarding screen of the finished prototype.">
                 <h3>Works Cited</h3>
                 <p class="paragraph">
                     ​Cooper, Alan & Robert Reimann, David Cronin, Christopher Noessel. 2014. About Face: The Essentials of Interaction Design, 4th Edition. Hoboken, NJ: Wiley Press.
