--- a/projects/booktunes.html
+++ b/projects/booktunes.html
@@ -83,7 +83,7 @@
                     Method
                 </h3>
                 <p class="paragraph">
-                    GDD, or Goal Directed Design, was created by Alan Cooper, and is detailed in his book 'About Face – The essentials of interaction design'. The method is a behavior and evidence-based design process that uses research to create a fictional "persona", or average user, and then use that persona to create a robust application that fulfils the persona's requirements.
+                    GDD, or Goal Directed Design, was created by Alan Cooper, and is detailed in his book 'About Face – The essentials of interaction design'. The method is a behavior and evidence-based design process that uses research to create a fictional "persona", or average user, and then use that persona to create a robust application that fulfils the persona's requirements. (Cooper et al., 23)
                 </p>
                 <p class="paragraph">
                     As mentioned earlier, our team leader was the creator of the idea, so the normally included requirements phase was dropped.
