Got tabs to work

--- a/work.html
+++ b/work.html
@@ -34,7 +34,7 @@
             <!-- Projects List -->
             <!-- Tab links -->
             <div class="tab bar">
-                <button class="tablinks btn" onclick="openCity(event, 'Design')">Design</button>
+                <button class="tablinks btn active" onclick="openCity(event, 'Design')">Design</button>
                 <button class="tablinks btn" onclick="openCity(event, 'Writing')">Writing</button>
                 <button class="tablinks btn" onclick="openCity(event, 'Software')">Software</button>
                 <button class="tablinks btn" onclick="openCity(event, 'Experience')">Work Experience</button>
