Rewrote home, working on work.html

--- a/work.html
+++ b/work.html
@@ -112,6 +112,31 @@
             <div id="Writing" class="tabcontent">
                 <div class="big" id="projectCardList">
                     <!-- Add Wizard Farming -->
+                    <div class="big" id="projectCardList">
+                        <div class="projectCard">
+                            <div class="card" href="#">
+                                <img class="card-img-top" src="assets/atlantalegalaid.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Wizard Farming</h5>
+                                    <p class="card-text">A large narrative design project, made in Twine, and complete
+                                        with a pitch presentation and a Game Design Document!</p>
+                                    <!-- <p class="small"><i>Collaborated with Evan Slater</i></p> -->
+                                    <div class="cardButtons">
+                                        <a href="../wizard_farming.html" class="btn">Play Here</a>
+                                        <a href="../pechakucha.html" class="btn">Presentation</a>
+                                        <a href="https://docs.google.com/document/d/1Jvmuog78ZV8A_6C7X-R6xtgXR0kUwmAprgZauT7OCHU/edit?usp=sharing"
+                                            class="btn">Presentation Script</a>
+                                        <a href="https://at" class="btn">NPC Barks</a>
+                                        <a href="../" class="btn">GDC</a>
+                                    </div>
+                                    <div class="card-footer text-muted">
+                                        <i>Fall 2023</i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
                     <!-- Add God Damn Allergies. -->
                     <!-- Add The Seven Thirteen -->
                     <!-- Add some Academic Papers -->
@@ -229,7 +254,8 @@
                 </div>
             </div>
             <div id="Experience" class="tabcontent">
-                <!-- <h3>London</h3> -->
+                <!-- Add Code Ninjas -->
+                <!-- Add FedEx -->
                 <div class="big" id="projectCardList">
                     <div class="projectCard">
                         <div class="card" href="#">
