comments for todo

--- a/work.html
+++ b/work.html
@@ -189,9 +189,10 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Add God Damn Allergies. -->
-                    <!-- Add The Seven Thirteen -->
-                    <!-- Add some Academic Papers -->
+                    <!-- Add Social Media Fairy Tale -->
+                    <!-- Add Oral Storytelling -->
+                    <!-- Add Webcomic Script -->
+
 
                 </div>
             </div>
